--- a/src/components/create-game/Create-game.module.css
+++ b/src/components/create-game/Create-game.module.css
@@ -4,15 +4,18 @@
   justify-content: space-evenly;
   align-items: center;
   height: 100vh;
+  padding: 1rem;
   background-color: #0d0d0d;
 }
 .createGame h1 {
+  margin: 1rem;
   font-size: 1.25rem;
   color: #f2f2f2;
   text-align: center;
 }
 
 .gameRange {
+  margin: 1rem;
   font-size: 1rem;
   text-align: center;
   line-height: 2rem;
@@ -48,4 +51,10 @@
   border: 2px solid #9fa2a6;
   border-radius: 1rem;
   background-color: transparent;
+}
+
+.startGame {
+  padding: 0.75rem 2rem;
+  border: none;
+  border-radius: 1rem;
 }
