--- a/src/components/create-game/Create-game.module.scss
+++ b/src/components/create-game/Create-game.module.scss
@@ -6,8 +6,10 @@
   justify-content: space-evenly;
   align-items: center;
   height: 100vh;
+  padding: 1rem;
   background-color: $background;
   h1 {
+    margin: 1rem;
     font-size: 1.25rem;
     color: $brightest;
     text-align: center;
@@ -15,6 +17,7 @@
 }
 
 .gameRange {
+  margin: 1rem;
   font-size: 1rem;
   text-align: center;
   line-height: 2rem;
@@ -49,4 +52,10 @@
   border: 2px solid $text;
   border-radius: 1rem;
   background-color: transparent;
+}
+
+.startGame {
+  padding: 0.75rem 2rem;
+  border: none;
+  border-radius: 1rem;
 }
