--- a/src/components/word-guesser/Word-guesser.module.css
+++ b/src/components/word-guesser/Word-guesser.module.css
@@ -6,6 +6,9 @@
   height: 100vh;
   background-color: #0d0d0d;
 }
+.wordGuesser h3 {
+  color: #9fa2a6;
+}
 
 .word {
   display: flex;
@@ -15,4 +18,22 @@
   margin: 0.5rem;
   padding: 0.5rem;
   border-bottom: 2px solid #9fa2a6;
+}
+
+.keyboard {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.keyRows {
+  display: flex;
+  justify-content: center;
+}
+
+.key {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 2px solid #9fa2a6;
+  border-radius: 0.5rem;
 }
