--- a/src/components/word-guesser/Word-guesser.module.scss
+++ b/src/components/word-guesser/Word-guesser.module.scss
@@ -7,6 +7,9 @@
   align-items: center;
   height: 100vh;
   background-color: $background;
+  h3 {
+    color: $text;
+  }
 }
 
 .word {
@@ -17,4 +20,22 @@
     padding: 0.5rem;
     border-bottom: 2px solid $text;
   }
+}
+
+.keyboard {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+.keyRows {
+  display: flex;
+  justify-content: center;
+}
+
+.key {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  border: 2px solid $text;
+  border-radius: 0.5rem;
 }
