--- a/src/components/word-guesser/Word-guesser.module.css
+++ b/src/components/word-guesser/Word-guesser.module.css
@@ -37,3 +37,11 @@
   border: 2px solid #9fa2a6;
   border-radius: 0.5rem;
 }
+
+.yes {
+  background-color: green;
+}
+
+.no {
+  background-color: red;
+}
