--- a/src/components/word-guesser/Word-guesser.module.scss
+++ b/src/components/word-guesser/Word-guesser.module.scss
@@ -39,3 +39,10 @@
   border: 2px solid $text;
   border-radius: 0.5rem;
 }
+
+.yes {
+  background-color: green;
+}
+.no {
+  background-color: red;
+}
