--- a/src/components/word-guesser/Word-guesser.module.css
+++ b/src/components/word-guesser/Word-guesser.module.css
@@ -32,8 +32,9 @@
 }
 
 .key {
+  font-size: 0.75rem;
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin: 0.25rem;
   border: 2px solid #9fa2a6;
   border-radius: 0.5rem;
 }
