--- a/src/components/word-guesser/Word-guesser.module.scss
+++ b/src/components/word-guesser/Word-guesser.module.scss
@@ -34,8 +34,9 @@
 }
 
 .key {
+  font-size: 0.75rem;
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin: 0.25rem;
   border: 2px solid $text;
   border-radius: 0.5rem;
 }
